# L3-Info-Simulateur-ARM

./: .gitignore  Makefile.in  README.md  arm_branch_other.c  arm_constants.c  arm_data_processing.c  arm_data_processing.h  arm_exception.c  arm_instruction.c  arm_instruction.h  arm_load_store.c  arm_load_store.h  memory.c  memory.h  memory_test.c  registers.c  registers.h  registers_test  registers_test.c
Examples/: Makefile.am  Makefile.in  test1.s  test2  test2.s  test3.s  test4.s
Trace-exemples/Trace-result/: example1  example2  example3  example4  test1  test2  test3  test4
